[tool.poetry]
name = "asyncio-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "asyncio_example"}]

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^22.1.0"
requests = "^2.28.1"
httpx = "^0.23.3"
beautifulsoup4 = "^4.11.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
